initial delete working
