# Widget/src/app/rest/api/transactions.service.ts
@@ -88,6 +88,56 @@ export class TransactionsService {
     }
 
     /**
+     * Delete a transaction
+     * @param transactionId The id that needs to be deleted.
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+     public deleteTransaction(transactionId: string, observe?: 'body', reportProgress?: boolean, options?: {httpHeaderAccept?: undefined, context?: HttpContext}): Observable<any>;
+     public deleteTransaction(transactionId: string, observe?: 'response', reportProgress?: boolean, options?: {httpHeaderAccept?: undefined, context?: HttpContext}): Observable<HttpResponse<any>>;
+     public deleteTransaction(transactionId: string, observe?: 'events', reportProgress?: boolean, options?: {httpHeaderAccept?: undefined, context?: HttpContext}): Observable<HttpEvent<any>>;
+     public deleteTransaction(transactionId: string, observe: any = 'body', reportProgress: boolean = false, options?: {httpHeaderAccept?: undefined, context?: HttpContext}): Observable<any> {
+         if (transactionId === null || transactionId === undefined) {
+             throw new Error('Required parameter transactionId was null or undefined when calling deleteTransaction.');
+         }
+ 
+         let localVarHeaders = this.defaultHeaders;
+ 
+         let localVarHttpHeaderAcceptSelected: string | undefined = options && options.httpHeaderAccept;
+         if (localVarHttpHeaderAcceptSelected === undefined) {
+             // to determine the Accept header
+             const httpHeaderAccepts: string[] = [
+             ];
+             localVarHttpHeaderAcceptSelected = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+         }
+         if (localVarHttpHeaderAcceptSelected !== undefined) {
+             localVarHeaders = localVarHeaders.set('Accept', localVarHttpHeaderAcceptSelected);
+         }
+ 
+         let localVarHttpContext: HttpContext | undefined = options && options.context;
+         if (localVarHttpContext === undefined) {
+             localVarHttpContext = new HttpContext();
+         }
+ 
+ 
+         let responseType_: 'text' | 'json' = 'json';
+         if(localVarHttpHeaderAcceptSelected && localVarHttpHeaderAcceptSelected.startsWith('text')) {
+             responseType_ = 'text';
+         }
+ 
+         return this.httpClient.delete<any>(`${this.configuration.basePath}/transactions/${encodeURIComponent(String(transactionId))}`,
+             {
+                 context: localVarHttpContext,
+                 responseType: <any>responseType_,
+                 withCredentials: this.configuration.withCredentials,
+                 headers: localVarHeaders,
+                 observe: observe,
+                 reportProgress: reportProgress
+             }
+         );
+     }
+
+    /**
      * Gets all the transactions
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
